# lamadre

./: .gitignore  NEXT_STEPS.md  PRE_MAINNET_COMPLETE.md  README.md
contracts/: Lamadre.nr
docs/: COMPANY.md  DEPLOYMENT.md  PRE_MAINNET_STATUS.md  PRIVATE_GIT.md  SETUP_AND_NEXT_STEPS.md
lamadre-aztec/: Nargo.toml  README.md
lamadre-aztec/src/: main.nr
lamadre-clean/src/: main.nr
lamadre-contract/: Nargo.toml
lamadre-contract-final/: Nargo.toml
lamadre-contract-final/src/: main.nr
lamadre-contract/src/: main.nr
lamadre-deployable/: Nargo.toml
noir/: Nargo.toml
noir/circuits/: minimal_delivery.nr
noir/src/: lib.nr
paper/: lamadre-paper.md
rust/: Cargo.toml
rust/src/: delivery.rs  error.rs  lib.rs  monero.rs  tranching.rs
rust/tests/: e2e_vectors.rs
scripts/: e2e.sh  lamadre_harness.sh  setup.sh
specs/: PROTOCOL.md
